update package to output purl and update to query via hash
